--- a/src/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/src/app/src/main/res/menu/activity_menu_drawer.xml
@@ -7,20 +7,20 @@
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="Reserva" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Galeria" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Acerca de Nosotros" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
-    </group>
+            android:title="Contáctanos" />
+    </group>    
 
     <item android:title="Communicate">
         <menu>
