casi terminado el fragments

--- a/src/app/src/main/res/layout/fragment_contac_us.xml
+++ b/src/app/src/main/res/layout/fragment_contac_us.xml
@@ -18,12 +18,12 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="75dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="83dp"
-        android:layout_marginRight="83dp"
-        android:layout_marginBottom="464dp"
+        android:layout_marginStart="73dp"
+        android:layout_marginLeft="73dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="85dp"
+        android:layout_marginRight="85dp"
+        android:layout_marginBottom="466dp"
         android:gravity="center"
         android:text="CONTACTANOS"
         android:textColor="@android:color/holo_red_dark"
@@ -40,12 +40,12 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginEnd="326dp"
-        android:layout_marginRight="326dp"
-        android:layout_marginBottom="404dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="325dp"
+        android:layout_marginRight="325dp"
+        android:layout_marginBottom="414dp"
         android:src="@drawable/ic_gps" />
 
     <TextView
@@ -58,12 +58,12 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="65dp"
-        android:layout_marginLeft="65dp"
-        android:layout_marginTop="63dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginBottom="407dp"
+        android:layout_marginStart="62dp"
+        android:layout_marginLeft="62dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="419dp"
         android:text="Av. Huancavelica 1335, El Tambo, Huancayo "
         android:textSize="16sp"
         android:textStyle="bold|italic" />
@@ -92,10 +92,11 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="199dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="186dp"
         android:layout_marginEnd="324dp"
         android:layout_marginRight="324dp"
-        android:layout_marginBottom="256dp"
+        android:layout_marginBottom="269dp"
         android:src="@drawable/ic_sobre_cerrado" />
 
     <ImageView
@@ -107,10 +108,11 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="280dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="248dp"
         android:layout_marginEnd="324dp"
         android:layout_marginRight="324dp"
-        android:layout_marginBottom="174dp"
+        android:layout_marginBottom="206dp"
         android:src="@drawable/ic_mundo" />
 
     <TextView
@@ -123,10 +125,10 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="3dp"
-        android:layout_marginTop="138dp"
+        android:layout_marginTop="109dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
-        android:layout_marginBottom="349dp"
+        android:layout_marginBottom="378dp"
         android:text="+51 999 430 221 | +51 064 24 24 55"
         android:textSize="16sp"
         android:textStyle="bold|italic" />
@@ -141,10 +143,10 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="203dp"
         android:layout_marginEnd="26dp"
         android:layout_marginRight="26dp"
-        android:layout_marginBottom="270dp"
+        android:layout_marginBottom="287dp"
         android:text="info@adaspalacehotel,com"
         android:textSize="18sp"
         android:textStyle="bold|italic" />
@@ -159,14 +161,68 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="70dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="296dp"
-        android:layout_marginEnd="81dp"
-        android:layout_marginRight="81dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginLeft="76dp"
+        android:layout_marginTop="266dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginRight="75dp"
+        android:layout_marginBottom="226dp"
         android:text="www.adaspalace.com"
         android:textSize="18sp"
         android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="370dp"
+        android:layout_height="54dp"
+        android:layout_alignStart="@+id/imageView6"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="302dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginBottom="155dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Nombre y Apellido:" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="373dp"
+        android:layout_height="46dp"
+        android:layout_alignStart="@+id/imageView6"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="359dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="106dp"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        android:text="E-mail:" />
+
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="366dp"
+        android:layout_height="91dp"
+        android:layout_alignStart="@+id/imageView6"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="416dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginBottom="4dp"
+        android:ems="10"
+        android:gravity="top"
+        android:inputType="date"
+        android:text="Mensaje:" />
 
 </RelativeLayout>
