--- a/src/app/src/main/res/layout/fragment_contac_us.xml
+++ b/src/app/src/main/res/layout/fragment_contac_us.xml
@@ -10,20 +10,20 @@
 
     <TextView
         android:id="@+id/textView18"
-        android:layout_width="226dp"
-        android:layout_height="45dp"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="73dp"
-        android:layout_marginLeft="73dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="0dp"
-        android:layout_marginEnd="85dp"
-        android:layout_marginRight="85dp"
-        android:layout_marginBottom="466dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="476dp"
         android:gravity="center"
         android:text="CONTACTANOS"
         android:textColor="@android:color/holo_red_dark"
@@ -40,12 +40,12 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="45dp"
-        android:layout_marginEnd="325dp"
-        android:layout_marginRight="325dp"
-        android:layout_marginBottom="414dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="66dp"
+        android:layout_marginEnd="323dp"
+        android:layout_marginRight="323dp"
+        android:layout_marginBottom="393dp"
         android:src="@drawable/ic_gps" />
 
     <TextView
@@ -58,12 +58,12 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="62dp"
-        android:layout_marginLeft="62dp"
-        android:layout_marginTop="51dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginRight="3dp"
-        android:layout_marginBottom="419dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginLeft="65dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="398dp"
         android:text="Av. Huancavelica 1335, El Tambo, Huancayo "
         android:textSize="16sp"
         android:textStyle="bold|italic" />
@@ -72,89 +72,60 @@
         android:id="@+id/imageView7"
         android:layout_width="48dp"
         android:layout_height="46dp"
-        android:layout_alignStart="@+id/imageView6"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="125dp"
-        android:layout_marginEnd="325dp"
-        android:layout_marginRight="325dp"
-        android:layout_marginBottom="340dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginLeft="19dp"
+        android:layout_marginTop="155dp"
+        android:layout_marginEnd="320dp"
+        android:layout_marginRight="320dp"
+        android:layout_marginBottom="310dp"
         android:src="@drawable/ic_receptor_de_telefono" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="49dp"
         android:layout_height="56dp"
-        android:layout_alignStart="@+id/imageView6"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="186dp"
-        android:layout_marginEnd="324dp"
-        android:layout_marginRight="324dp"
-        android:layout_marginBottom="269dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="243dp"
+        android:layout_marginEnd="320dp"
+        android:layout_marginRight="320dp"
+        android:layout_marginBottom="212dp"
         android:src="@drawable/ic_sobre_cerrado" />
 
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="49dp"
         android:layout_height="57dp"
-        android:layout_alignStart="@+id/imageView6"
+        android:layout_alignEnd="@+id/txtLink"
+        android:layout_alignRight="@+id/txtLink"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="248dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="334dp"
         android:layout_marginEnd="324dp"
         android:layout_marginRight="324dp"
-        android:layout_marginBottom="206dp"
+        android:layout_marginBottom="120dp"
         android:src="@drawable/ic_mundo" />
 
     <TextView
         android:id="@+id/textView20"
-        android:layout_width="276dp"
-        android:layout_height="24dp"
-        android:layout_alignStart="@+id/textView19"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="109dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="378dp"
-        android:text="+51 999 430 221 | +51 064 24 24 55"
-        android:textSize="16sp"
-        android:textStyle="bold|italic" />
-
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="291dp"
-        android:layout_height="21dp"
-        android:layout_alignStart="@+id/textView19"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="203dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginRight="26dp"
-        android:layout_marginBottom="287dp"
-        android:text="info@adaspalacehotel,com"
-        android:textSize="18sp"
-        android:textStyle="bold|italic" />
-
-    <TextView
-        android:id="@+id/txtLink"
-        android:layout_width="233dp"
-        android:layout_height="19dp"
+        android:layout_width="308dp"
+        android:layout_height="42dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -163,66 +134,72 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="76dp"
         android:layout_marginLeft="76dp"
-        android:layout_marginTop="266dp"
-        android:layout_marginEnd="75dp"
-        android:layout_marginRight="75dp"
-        android:layout_marginBottom="226dp"
+        android:layout_marginTop="157dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="312dp"
+        android:text="+51 999 430 221 | +51 064 24 24 55"
+        android:textSize="16sp"
+        android:textStyle="bold|italic" />
+
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="304dp"
+        android:layout_height="48dp"
+        android:layout_alignStart="@+id/textView19"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="248dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="215dp"
+        android:text="info@adaspalacehotel,com"
+        android:textSize="18sp"
+        android:textStyle="bold|italic" />
+
+    <TextView
+        android:id="@+id/txtLink"
+        android:layout_width="314dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="343dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="128dp"
         android:text="www.adaspalace.com"
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="370dp"
-        android:layout_height="54dp"
-        android:layout_alignStart="@+id/imageView6"
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="44dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="302dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_marginBottom="155dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Nombre y Apellido:" />
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="373dp"
-        android:layout_height="46dp"
-        android:layout_alignStart="@+id/imageView6"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="359dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginBottom="106dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:text="E-mail:" />
-
-    <EditText
-        android:id="@+id/editText3"
-        android:layout_width="366dp"
-        android:layout_height="91dp"
-        android:layout_alignStart="@+id/imageView6"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="416dp"
-        android:layout_marginEnd="7dp"
-        android:layout_marginRight="7dp"
-        android:layout_marginBottom="4dp"
-        android:ems="10"
-        android:gravity="top"
-        android:inputType="date"
-        android:text="Mensaje:" />
+        android:layout_marginStart="116dp"
+        android:layout_marginLeft="116dp"
+        android:layout_marginTop="426dp"
+        android:layout_marginEnd="118dp"
+        android:layout_marginRight="118dp"
+        android:layout_marginBottom="41dp"
+        android:text="CONTACTAR"
+        android:background="@color/reservar"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
 
 </RelativeLayout>
