--- a/src/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/src/app/src/main/res/menu/activity_menu_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/ic_online_reservation"
             android:title="Reserva" />
         <item
+            android:id="@+id/nav_reserva"
+            android:icon="@drawable/ic_users"
+            android:title="Registrar Clientes" />
+        <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Galeria" />
