--- a/src/app/src/main/res/drawable/ic_gps.xml
+++ b/src/app/src/main/res/drawable/ic_gps.xml
@@ -1,4 +1,5 @@
-<vector android:height="24dp" android:viewportHeight="80"
-    android:viewportWidth="80" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#030104" android:pathData="M40,0C26.191,0 15,11.194 15,25c0,23.87 25,55 25,55s25,-31.13 25,-55C65,11.194 53.807,0 40,0zM40,38.8c-7.457,0 -13.5,-6.044 -13.5,-13.5S32.543,11.8 40,11.8c7.455,0 13.5,6.044 13.5,13.5S47.455,38.8 40,38.8z"/>
+<vector android:height="24dp" android:viewportHeight="434.174"
+    android:viewportWidth="434.174" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="M217.087,119.397c-24.813,0 -45,20.187 -45,45s20.187,45 45,45s45,-20.187 45,-45S241.901,119.397 217.087,119.397z"/>
+    <path android:fillColor="#FF000000" android:pathData="M217.087,0c-91.874,0 -166.62,74.745 -166.62,166.619c0,38.93 13.421,74.781 35.878,103.177l130.742,164.378l130.742,-164.378c22.457,-28.396 35.878,-64.247 35.878,-103.177C383.707,74.745 308.961,0 217.087,0zM217.087,239.397c-41.355,0 -75,-33.645 -75,-75s33.645,-75 75,-75s75,33.645 75,75S258.443,239.397 217.087,239.397z"/>
 </vector>
