--- a/src/app/src/main/res/layout/fragment_map_fragment2.xml
+++ b/src/app/src/main/res/layout/fragment_map_fragment2.xml
@@ -17,6 +17,15 @@
         android:background="@android:color/white"
         >
 
+        <TextView
+            android:id="@+id/txtCurrentLocation"
+            android:layout_width="match_parent"
+            android:layout_height="206dp"
+            android:layout_weight="4"
+
+            android:text="BIENVENIDO AL HOTEL ADA'S PALACE"
+            android:textSize="20dp" />
+
         <com.google.android.gms.maps.MapView
             android:id="@+id/mapView"
             android:layout_width="match_parent"
@@ -28,11 +37,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="xD"
-            android:id="@+id/txtCurrentLocation"
-            android:layout_weight="4"/>
+
+
+
     </LinearLayout>
 </FrameLayout>
